CRF-4: Allow report re-run for all service ids
- Updated JudgmentRepository.  Renamed existing findForUpdate method to findForUpdateByServiceId.  Added a new findForUpdate method that gets back judgments for all service ids.  Removed redundant/unused methods.
- Updated ScheduledReportService.  When report is invoked without a service id it now uses new findForUpdate method to get judgments for all service ids rather than trying to get all service ids then get judgments for each one.  The findActiveServiceIds method it used to use only returned judgments which had a null reported to RTL date.  This meant it wouldn't return any judgments when trying to rerun a report for all service ids.
- Updated associated test classes.